project3 with wrong margins I cannot solve

--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -9,6 +9,24 @@
   background-image: url(../../../images/cover_image.jpg);
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
   color: white;
   text-decoration: none;
+}
+@media screen and (max-width: 1024px) {
+  .cover__background {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__background {
+    min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__background {
+    min-height: 200px;
+  }
 }
