--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,11 +9,9 @@
   text-align: center;
 }
 
-/* @media screen and (min-width: 768px) {
+@media screen and (max-width: 320px) {
   .cover__subtitle {
-    max-width: 320px;
-    margin-top: 32px;
-    font-size: 18px;
-    line-height: 22px;
+    font-size: 14px;
+    line-height: 16px;
   }
-} */
+}
