--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,3 +7,9 @@
   line-height: 76px;
   text-align: center;
 }
+@media screen and (max-width: 320px) {
+  .cover__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
