--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,9 +1,4 @@
 .cover {
-  width: 100%;
-}
-
-@media screen and (max-width: 1024px) {
-  .cover {
-    margin: 0;
-  }
+  max-width: 1184px;
+  margin: 0 auto;
 }
