--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -26,7 +26,8 @@
 }
 @media screen and (min-width: 1280px) {
   .lead__subtitle {
-    max-width: calc(100% - (2 * 330px));
+    max-width: 620px;
+    margin: 0 auto 64px;
     font-size: 30px;
     line-height: 36px;
   }
